policies/rbac/disallow-role-with-wildcards/resources.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: badrole-wildcard-in-verbs
  namespace: mas-dev-core
rules:
  - apiGroups:
      - "networking.k8s.io"
    resources:
      - networkpolicies
    verbs:
      - '*'
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: badrole-wildcard-in-resources
  namespace: mas-dev-core
rules:
  - apiGroups:
      - config.mas.ibm.com
    resources:
      - '*'
    verbs:
      - create
      - delete
      - get
      - list
      - patch
      - update
      - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole
  namespace: mas-dev-core
rules:
  - apiGroups:
      - "networking.k8s.io"
    resources:
      - networkpolicies
    verbs:
      - get
      - create
      - update
